# faro

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: ci.yml  release-api.yml  release-java.yml
faro-api/: Dockerfile  README.md  pyproject.toml
faro-api/api/: config.py  ingest.py  main.py  models.py  query.py  store.py
faro-api/api/routers/: health.py  values.py  violations.py
faro-api/tests/: test_health.py  test_ingest.py  test_values.py  test_values_summary.py  test_violations.py
faro-cli/: pyproject.toml
faro-core/: build.gradle
faro-core/src/main/java/dev/faro/core/: CaptureEvent.java  DataClassification.java  SerializableFunction.java
faro-core/src/main/resources/: faro-event-v1.avsc
faro-core/src/test/java/dev/faro/core/: CaptureEventTest.java
faro-e2e/: build.gradle  docker-compose.yml  submit.sh  tempo.yaml
faro-e2e/src/main/java/dev/faro/e2e/: EntityFaroSensorJob.java  EntitySensorPipeline.java  EntityStdoutSensorJob.java  FaroSensorJob.java  HttpSensorJob.java  KafkaSensorJob.java  OtelSensorJob.java  SensorPipeline.java  SensorPipelineJob.java  SensorReading.java  StdoutSensorJob.java
faro-flink/: build.gradle
faro-flink/src/main/java/dev/faro/flink/: AsyncCaptureEventSink.java  CaptureEventSink.java  CaptureEventSinkFactory.java  Faro.java  FaroConfig.java  FaroFeatureConfig.java  FaroKeyedProcessFunction.java  FaroProcessFunction.java  FaroProcessFunctionBase.java  FaroProcessWindowFunction.java  FaroSink.java  HttpCaptureEventSink.java  IntervalCounters.java  KafkaCaptureEventSink.java  OtelCaptureEventSink.java  StdoutCaptureEventSink.java
faro-flink/src/test/java/dev/faro/flink/: AsyncCaptureEventSinkTest.java  CapturingCaptureEventSink.java  FaroEntityModeTest.java  FaroKeyedProcessFunctionTest.java  (+8 more)
