[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faro-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "duckdb>=0.10",
    "pyarrow>=15.0",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.26",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
