[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faro-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "psycopg[binary]>=3.1",   # PostgreSQL — pipeline metadata store
    "httpx>=0.26",            # Flink REST API (JobGraph extraction)
    "rich>=13.0",             # Terminal output
]

[project.scripts]
faro = "faro_cli.main:cli"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0",
    "pytest-httpx>=0.28",     # Mock Flink REST responses
]
